# sharp3.5_SmartSpeaker

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  SECURITY_REVIEW.md  SPECIFICATION.md  dev-run.bat  release.bat  run.bat  setup.bat
.cargo/: config.toml.example
.github/workflows/: ci.yml  release.yml
config/: settings.toml
docs/: distribution-completed.md  distribution.md  hardware-requirements.md  remotion_prompt_guide.md  youtube_release_guide.md
scripts/: THIRD_PARTY_NOTICES.txt  cuda-env.bat  dev-run.bat  models_readme.txt  release.bat  run.bat  setup.bat
src/: config.rs  main.rs  webserver.rs
src/audio/: capture.rs  mod.rs  playback.rs  ring_buffer.rs  vad.rs
src/llm/: mod.rs  ollama.rs
src/pipeline/: mod.rs  sentence_splitter.rs  streaming.rs
src/rag/: embedder.rs  mod.rs  store.rs
src/stt/: mod.rs  model_downloader.rs  whisper.rs
src/tts/: mod.rs  voicevox.rs
src/wakeword/: detector.rs  mod.rs
