[package]
name = "smart_speaker"
version = "0.1.0"
edition = "2021"
description = "Rust製スマートスピーカー - ウェイクワード検出、音声認識、LLM応答、音声合成を統合"
authors = []
license = "MIT"
readme = "README.md"

[features]
default = []
cuda = ["whisper-rs/cuda"]

[dependencies]
# オーディオ入出力
cpal = "0.15"
rodio = "0.19"

# ウェイクワード検出
rustpotter = "3.0"
half = "=2.4.1"  # rand 0.8互換の最終バージョン (rustpotter/candle-core用)

# 音声認識 (CUDA: cargo build --features cuda)
whisper-rs = "0.16"

# HTTP通信
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2.1"

# 設定・シリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
tiny_http = "0.12"

# 時刻処理
chrono = { version = "0.4", features = ["serde"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ
log = "0.4"
env_logger = "0.10"
